fixed InfoContent overflow bug

--- a/client/src/pages/MapPage/MemorialMarker/InfoWindow.css
+++ b/client/src/pages/MapPage/MemorialMarker/InfoWindow.css
@@ -1,23 +1,14 @@
 .gm-style-iw {
   padding: 0 !important;
-  overflow:hidden!important;
-}
-
-@media screen and (max-width: 450px) and (max-height: 800px) {
-  .gm-style-iw {
-    overflow-y: hidden !important;
-  }
-}
-
-@media screen and (max-height: 800px) {
-  .gm-style-iw {
-    overflow-y: hidden !important;
-  }
 }
 
 .gm-style-iw-d {
   padding: 0 !important;
-  overflow: hidden !important;
+  overflow: auto !important;
+}
+
+.gm-style-iw-d {
+  padding: 0 !important;
 }
 
 .gm-ui-hover-effect {
